Fixes some spacing issues I just created

--- a/base-elements/_base-elements.scss
+++ b/base-elements/_base-elements.scss
@@ -26,7 +26,7 @@
         overflow-x: hidden;
         
         * {
-            margin-top: 0;
+            margin-bottom: 0;
         }
     }
 }
@@ -167,6 +167,8 @@ td {
 
 small {
     @include set-text-style($text-style-content-3);
+
+    margin-top: $space;
 }
 
 blockquote {
