--- a/components/page-footer/styles/_page-footer.scss
+++ b/components/page-footer/styles/_page-footer.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     flex-shrink: 0;
     flex-wrap: wrap;
-    padding-bottom: $space-xl;
+    padding-bottom: $space-l;
     padding-top: $space-l;
 
     @media screen and (min-width: breakpoint(medium)) {
